--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -15,10 +15,10 @@ brew "docker-machine-driver-hyperkit"
 brew "exercism"
 brew "fd"
 brew "fzf"
-brew "gdrive"
 brew "gettext"
 brew "gh"
 brew "git"
+brew "go"
 brew "grafana"
 brew "haskell-stack"
 brew "hlint"
@@ -35,6 +35,7 @@ brew "nim"
 brew "openjdk"
 brew "python-yq"
 brew "ripgrep"
+brew "rustup-init"
 brew "tmux"
 brew "watch"
 brew "golangci/tap/golangci-lint"
@@ -53,6 +54,6 @@ cask "notable"
 cask "qlmarkdown"
 cask "slack"
 cask "spectacle"
+cask "telegram"
 cask "visual-studio-code"
 cask "zoomus"
-cask "telegram"
