--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -10,12 +10,12 @@ tap "nektos/tap"
 brew "python@3.9"
 brew "awscli"
 brew "coreutils"
+brew "gettext"
 brew "docker"
 brew "docker-machine-driver-hyperkit"
 brew "exercism"
 brew "fd"
 brew "fzf"
-brew "gettext"
 brew "gh"
 brew "git"
 brew "go"
@@ -45,15 +45,16 @@ cask "docker"
 cask "firefox"
 cask "freecad"
 cask "gpg-suite"
+cask "inkscape"
 cask "insomnia"
 cask "kap"
 cask "keepassxc"
 cask "keybase"
 cask "kitty"
-cask "notable"
 cask "qlmarkdown"
+cask "signal"
 cask "slack"
 cask "spectacle"
 cask "telegram"
 cask "visual-studio-code"
-cask "zoomus"
+cask "zoom"
