homebrew: update Brewfile

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -9,17 +9,19 @@ tap "homebrew/services"
 tap "nektos/tap"
 brew "python@3.9"
 brew "awscli"
+brew "cargo-edit"
+brew "cfn-lint"
 brew "coreutils"
-brew "gettext"
-brew "docker"
+brew "docker", link: true
 brew "docker-machine-driver-hyperkit"
 brew "exercism"
 brew "fd"
 brew "fzf"
+brew "gettext"
 brew "gh"
 brew "git"
 brew "go"
-brew "grafana"
+brew "grafana", restart_service: true
 brew "haskell-stack"
 brew "hlint"
 brew "httpie"
@@ -34,12 +36,17 @@ brew "libsodium"
 brew "nim"
 brew "openjdk"
 brew "python-yq"
+brew "python@3.8"
 brew "ripgrep"
 brew "rustup-init"
+brew "starship"
 brew "tmux"
+brew "tree"
 brew "watch"
+brew "zig"
 brew "golangci/tap/golangci-lint"
 brew "nektos/tap/act"
+cask "cyberduck"
 cask "dbeaver-community"
 cask "docker"
 cask "firefox"
