October update: brew, vim, nvim, wezterm

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,4 +1,3 @@
-tap "adoptopenjdk/openjdk"
 tap "github/gh"
 tap "golangci/tap"
 tap "homebrew/bundle"
@@ -7,13 +6,13 @@ tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "homebrew/services"
 tap "nektos/tap"
+tap "wez/wezterm"
 brew "python@3.9"
 brew "awscli"
 brew "cargo-edit"
 brew "cfn-lint"
+brew "cloud-nuke"
 brew "coreutils"
-brew "docker", link: true
-brew "docker-machine-driver-hyperkit"
 brew "exercism"
 brew "fd"
 brew "fzf"
@@ -23,23 +22,30 @@ brew "git"
 brew "go"
 brew "grafana", restart_service: true
 brew "haskell-stack"
+brew "helm"
 brew "hlint"
+brew "python@3.10", link: true
 brew "httpie"
 brew "hyperkit"
 brew "jid"
 brew "jq"
 brew "kind"
 brew "kubernetes-cli"
+brew "krew"
 brew "libgcrypt"
 brew "libressl"
 brew "libsodium"
+brew "neovim"
 brew "nim"
 brew "openjdk"
+brew "openssh"
+brew "pnpm"
 brew "python-yq"
-brew "python@3.8"
 brew "ripgrep"
+brew "rust-analyzer"
 brew "rustup-init"
 brew "starship"
+brew "terraform"
 brew "tmux"
 brew "tree"
 brew "watch"
@@ -52,16 +58,16 @@ cask "docker"
 cask "firefox"
 cask "freecad"
 cask "gpg-suite"
-cask "inkscape"
 cask "insomnia"
 cask "kap"
 cask "keepassxc"
-cask "keybase"
 cask "kitty"
 cask "qlmarkdown"
-cask "signal"
+cask "rectangle"
 cask "slack"
-cask "spectacle"
+cask "spotify"
+cask "swiftbar"
 cask "telegram"
 cask "visual-studio-code"
+cask "wezterm-nightly"
 cask "zoom"
