--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -27,8 +27,8 @@ font_size 14.0
 
 #: Font size (in pts)
 
-adjust_line_height  -5
-adjust_column_width -0
+adjust_line_height 0
+adjust_column_width -1
 
 #: Change the size of each character cell kitty renders. You can use
 #: either numbers, which are interpreted as pixels or percentages
@@ -104,7 +104,7 @@ cursor_blink_interval 0
 
 #: Scrollback {{{
 
-scrollback_lines 10000
+# scrollback_lines 2000
 
 #: Number of lines of history to keep in memory for scrolling back.
 #: Memory is allocated on demand. Negative numbers are (effectively)
