homebrew: update Brewfile

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,3 +1,4 @@
+tap "adoptopenjdk/openjdk"
 tap "github/gh"
 tap "golangci/tap"
 tap "homebrew/bundle"
@@ -5,70 +6,85 @@ tap "homebrew/cask"
 tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "homebrew/services"
-tap "nektos/tap"
+tap "osx-cross/arm"
+tap "osx-cross/avr"
+tap "qmk/qmk"
 tap "wez/wezterm"
-brew "python@3.9"
-brew "awscli"
-brew "cargo-edit"
-brew "cfn-lint"
-brew "cloud-nuke"
+brew "aerc"
+brew "autoconf"
+brew "autoconf-archive"
+brew "automake"
+brew "libusb"
+brew "gettext"
 brew "coreutils"
+brew "libtiff"
 brew "exercism"
 brew "fd"
+brew "libtool"
 brew "fzf"
-brew "gettext"
+brew "gcc"
 brew "gh"
+brew "ghostscript"
 brew "git"
+brew "gnutls"
+brew "libgcrypt"
 brew "go"
 brew "grafana", restart_service: true
+brew "grep"
 brew "haskell-stack"
 brew "helm"
 brew "hlint"
-brew "python@3.10", link: true
 brew "httpie"
 brew "hugo"
-brew "hyperkit"
-brew "jid"
 brew "jq"
+brew "k9s"
 brew "kind"
 brew "kubernetes-cli"
 brew "krew"
-brew "libgcrypt"
+brew "kustomize"
+brew "ldns"
+brew "libpq", link: true
 brew "libressl"
 brew "libsodium"
+brew "mcrypt"
+brew "midnight-commander"
 brew "neovim"
+brew "nfpm"
 brew "nim"
-brew "openjdk"
+brew "node"
 brew "openssh"
 brew "pnpm"
+brew "podman"
 brew "python-yq"
 brew "ripgrep"
 brew "rust-analyzer"
 brew "rustup-init"
-brew "starship"
-brew "terraform"
+brew "sops"
+brew "tfenv"
+brew "tflint"
 brew "tmux"
 brew "tree"
 brew "watch"
+brew "wireguard-tools"
+brew "yamllint"
 brew "zig"
+brew "zola"
 brew "golangci/tap/golangci-lint"
-brew "nektos/tap/act"
+brew "qmk/qmk/qmk"
 cask "cyberduck"
 cask "dbeaver-community"
-cask "docker"
+cask "eloston-chromium"
 cask "firefox"
 cask "freecad"
 cask "gpg-suite"
 cask "insomnia"
 cask "kap"
 cask "keepassxc"
-cask "kitty"
 cask "qlmarkdown"
 cask "rectangle"
+cask "signal"
 cask "slack"
-cask "spotify"
 cask "swiftbar"
-cask "telegram"
 cask "visual-studio-code"
 cask "wezterm-nightly"
 cask "zoom"
