chore(brew): update Brewfile

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -30,8 +30,10 @@ brew "gnutls"
 brew "libgcrypt"
 brew "go"
 brew "grafana", restart_service: true
+brew "ghz"
 brew "grep"
 brew "haskell-stack"
+brew "helix"
 brew "helm"
 brew "hlint"
 brew "httpie"
