chore(homebrew): revisit Brewfile

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,92 +1,118 @@
-tap "adoptopenjdk/openjdk"
 tap "github/gh"
 tap "golangci/tap"
+tap "hashicorp/tap"
 tap "homebrew/bundle"
-tap "homebrew/cask"
 tap "homebrew/cask-versions"
-tap "homebrew/core"
 tap "homebrew/services"
-tap "osx-cross/arm"
-tap "osx-cross/avr"
-tap "qmk/qmk"
 tap "wez/wezterm"
-brew "aerc"
-brew "autoconf"
-brew "autoconf-archive"
-brew "automake"
-brew "libusb"
-brew "gettext"
+brew "xz"
 brew "coreutils"
-brew "libtiff"
-brew "exercism"
 brew "fd"
-brew "libtool"
 brew "fzf"
 brew "gcc"
 brew "gh"
-brew "ghostscript"
 brew "git"
 brew "gnutls"
-brew "libgcrypt"
 brew "go"
-brew "grafana", restart_service: true
-brew "ghz"
-brew "grep"
-brew "haskell-stack"
-brew "helix"
+brew "govulncheck"
+brew "grpcurl"
 brew "helm"
-brew "hlint"
+brew "hey"
 brew "httpie"
 brew "hugo"
 brew "jq"
-brew "k9s"
 brew "kind"
 brew "kubernetes-cli"
 brew "krew"
 brew "kustomize"
 brew "ldns"
-brew "libpq", link: true
-brew "libressl"
-brew "libsodium"
-brew "mcrypt"
+brew "libgcrypt"
+brew "lua-language-server"
 brew "midnight-commander"
 brew "neovim"
-brew "nfpm"
-brew "nim"
 brew "node"
 brew "openssh"
 brew "pnpm"
-brew "podman"
-brew "python-yq"
 brew "ripgrep"
 brew "rust-analyzer"
 brew "rustup-init"
-brew "sops"
-brew "tfenv"
-brew "tflint"
-brew "tmux"
 brew "tree"
 brew "watch"
-brew "wireguard-tools"
 brew "yamllint"
-brew "zig"
-brew "zola"
+brew "yq"
+brew "zoxide"
 brew "golangci/tap/golangci-lint"
-brew "qmk/qmk/qmk"
 cask "cyberduck"
 cask "dbeaver-community"
-cask "eloston-chromium"
 cask "firefox"
-cask "freecad"
+cask "google-chrome"
 cask "gpg-suite"
 cask "insomnia"
 cask "kap"
 cask "keepassxc"
 cask "qlmarkdown"
 cask "rectangle"
-cask "signal"
 cask "slack"
-cask "swiftbar"
 cask "visual-studio-code"
 cask "wezterm-nightly"
 cask "zoom"
+vscode "bierner.markdown-mermaid"
+vscode "charliermarsh.ruff"
+vscode "DavidAnson.vscode-markdownlint"
+vscode "eamodio.gitlens"
+vscode "EditorConfig.EditorConfig"
+vscode "Equinusocio.vsc-community-material-theme"
+vscode "Equinusocio.vsc-material-theme"
+vscode "equinusocio.vsc-material-theme-icons"
+vscode "foxundermoon.shell-format"
+vscode "gera2ld.markmap-vscode"
+vscode "GitHub.vscode-pull-request-github"
+vscode "golang.go"
+vscode "hashicorp.terraform"
+vscode "hoovercj.haskell-linter"
+vscode "JohnnyMorganz.stylua"
+vscode "justusadam.language-haskell"
+vscode "ms-python.isort"
+vscode "ms-python.python"
+vscode "ms-python.vscode-pylance"
+vscode "ms-vscode.cpptools"
+vscode "redhat.vscode-yaml"
+vscode "rust-lang.rust-analyzer"
+vscode "sumneko.lua"
+vscode "vadimcn.vscode-lldb"
+vscode "vscodevim.vim"
+vscode "yzhang.markdown-all-in-one"
+
+# # Optional packages
+# tap "adoptopenjdk/openjdk"
+# tap "kubeshark/kubeshark"
+# tap "osx-cross/arm"
+# tap "osx-cross/avr"
+# tap "qmk/qmk"
+# tap "ankitpokhrel/jira-cli"
+# tap "hashicorp/tap"
+# brew "aerc"
+# brew "coreutils"
+# brew "hugo"
+# brew "exercism"
+# brew "ghz"
+# brew "haskell-stack"
+# brew "hlint"
+# brew "helix"
+# brew "k9s"
+# brew "podman"
+# brew "python-yq"
+# brew "sops"
+# brew "tfenv"
+# brew "tflint"
+# brew "tmux"
+# brew "zola"
+# cask "freecad"
+# cask "swiftbar"
+# cask "signal"
+# cask "keycastr"
+# brew "qmk/qmk/qmk"
+# cask "spotify"
+# cask "podman-desktop"
+# cask "karabiner-elements"
+# brew "hashicorp/tap/terraform-ls"
