chore(aerc): adjust bindings

--- a/aerc/binds.conf
+++ b/aerc/binds.conf
@@ -52,13 +52,13 @@ zR = :unfold -a<Enter>
 <tab> = :fold -t<Enter>
 
 <Enter> = :view<Enter>
-d = :prompt 'Really delete this message?' 'delete-message'<Enter>
-D = :delete<Enter>
+d = :move Trash<Enter>
+D = :prompt 'Really delete this message?' 'delete-message'<Enter>
 a = :archive flat<Enter>
 A = :unmark -a<Enter>:mark -T<Enter>:archive flat<Enter>
 
 C = :compose<Enter>
-m = :compose<Enter>
+m = :move<space><tab>
 
 rr = :reply -a<Enter>
 rq = :reply -aq<Enter>
