fix(aerc): stylesets, add html,img mime handlers

--- a/aerc/aerc.conf
+++ b/aerc/aerc.conf
@@ -65,9 +65,9 @@ default-menu-cmd=fzf
 
 [ui]
 
-styleset-name=catppuccin-macchiato
 border-char-vertical="│"
 border-char-horizontal="─"
+styleset-name=catppuccin-macchiato
 
 #
 # Describes the format for each row in a mailbox view. This is a comma
@@ -659,15 +659,16 @@ mouse-enabled=true
 # against (non-case-sensitive) and a comma, e.g. subject,text will match a
 # subject which contains "text". Use header,~regex to match against a regex.
 #
-text/plain=colorize
+text/plain=wrap -w 120 | colorize
 text/calendar=calendar
 message/delivery-status=colorize
 message/rfc822=colorize
 #text/html=pandoc -f html -t plain | colorize
 #text/html=html | colorize
+text/html=w3m -I UTF-8 -T text/html -cols $(tput cols) -dump -o display_image=false -o display_link_number=true | colorize
 #text/*=bat -fP --file-name="$AERC_FILENAME"
 #application/x-sh=bat -fP -l sh
-#image/*=catimg -w $(tput cols) -
+image/*=imgcat -
 #subject,~Git(hub|lab)=lolcat -f
 #from,thatguywhodoesnothardwraphismessages=wrap -w 100 | colorize
 
