--- a/ghostty/config
+++ b/ghostty/config
@@ -1,12 +1,26 @@
-theme = catppuccin-mocha
+theme = "Catppuccin Mocha"
+
 font-size = 16
+font-family = "Berkeley Mono"
+font-family-italic = "JetBrains Mono"
+font-feature = "+ss01"
+
 shell-integration-features = no-cursor
+
 cursor-style = block
 cursor-style-blink = false
 window-padding-x = 5,5
 window-padding-y = 5,5
-keybind = global:ctrl+grave_accent=toggle_quick_terminal
+
+keybind = global:alt+grave_accent=toggle_quick_terminal
 mouse-hide-while-typing = true
+
 macos-titlebar-style = tabs
 macos-titlebar-proxy-icon = hidden
-#custom-shader=.shaders/cursor_blaze.glsl
+macos-option-as-alt = true
+macos-icon = custom-style
+macos-icon-frame = beige
+macos-icon-ghost-color = #cdd6f4
+macos-icon-screen-color = #1e1e2e
+
+custom-shader=.shaders/cursor-blaze.glsl
