chore: update aerc bindings

--- a/aerc/binds.conf
+++ b/aerc/binds.conf
@@ -100,6 +100,7 @@ D = :delete<Enter>
 A = :archive flat<Enter>
 
 <C-l> = :open-link <space>
+<C-v> = :pipe nvim -<Enter>
 
 f = :forward<Enter>
 rr = :reply -a<Enter>
